@@ -29,6 +29,7 @@ namespace Common.Logging.Simple
 	/// </summary>
     /// <author>Gilles Bayon</author>
     /// <version>$Id: ConsoleOutLogger.cs,v 1.1 2006/11/13 07:17:55 markpollack Exp $</version>
+    [Serializable]
 	public class ConsoleOutLogger : ILog
 	{
 		private bool _showDateTime = false;
