@@ -2,6 +2,15 @@ Common.Logging CHANGELOG
 =====================================
 http://netcommon.sf.net
 
+Releaes 1.0.2, March 15 2007
+
+Summary:  Bug Fix Release
+
+Bug
+
+[CIL-4] - Implementations of ILog are now serializable
+
+---------------------------
 
 Release 1.0.1, March 1 2007
 
@@ -10,7 +19,7 @@ Summary:  Bug Fix Release
 Bug
 
 [CIL-1] - Null Pointer Exception when passing in null value for message.
-[CIL2] - Add log4net 1.2.9 .dll to distribution for .NET 1.0
+[CIL-2] - Add log4net 1.2.9 .dll to distribution for .NET 1.0
 
 Improvement
 [CIL-3] - Add simple NUnit test for Common.Logging
